
[package]
name = "nanovna-saver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-serial = "5.4.5"
uuid = { version = "1.20.0", features = ["v4"] }
polars = { version = "0.36", default-features = false, features = ["fmt", "lazy", "csv", "parquet","dtype-full"] }
hashbrown = { version = "0.14.5", features = ["raw"] }
clap = { version = "4", features = ["derive"]}


[dev-dependencies]
mockall = "0.14.0"


